--- a/data/build.gradle
+++ b/data/build.gradle
@@ -24,8 +24,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -37,14 +37,6 @@ dependencies {
 
     implementation "net.zetetic:android-database-sqlcipher:4.4.0"
     implementation "androidx.sqlite:sqlite:2.3.0"
-
-    // Kakao
-    implementation "com.kakao.sdk:v2-user:2.13.0"
-
-    // Naver
-    implementation 'com.navercorp.nid:oauth:5.5.0'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.6.10'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 
     // RxJava3
     implementation "io.reactivex.rxjava3:rxjava:3.0.0"
@@ -59,11 +51,6 @@ dependencies {
     implementation "androidx.room:room-ktx:2.5.1"
     kapt "androidx.room:room-compiler:2.5.1"
 
-    // Retrofit2
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
-
     // Kotest
     testImplementation("io.kotest:kotest-runner-junit5:5.3.2")
     testImplementation("io.kotest:kotest-assertions-core:5.3.2")
@@ -71,8 +58,6 @@ dependencies {
     // Mockk
     testImplementation("io.mockk:mockk:1.12.0")
     testImplementation "com.squareup.okhttp3:mockwebserver:4.9.0"
-
-    implementation 'androidx.core:core-ktx:1.8.0'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
