--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -5,8 +5,8 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
 }
 
 dependencies {
@@ -16,5 +16,4 @@ dependencies {
 
     // Mockk
     testImplementation("io.mockk:mockk:1.12.0")
-    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.0"
 }
