--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -31,17 +31,17 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
     buildFeatures {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        kotlinCompilerExtensionVersion = "1.4.2"
     }
     packagingOptions {
         resources {
@@ -52,14 +52,6 @@ android {
 
 dependencies {
     implementation project(path: ':domain')
-
-    // Kakao
-    implementation "com.kakao.sdk:v2-user-rx:2.14.0" // 카카오 로그인
-
-    // Naver
-    implementation("com.navercorp.nid:oauth:5.5.0") // jdk 11
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.6.10'
-    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0')
 
     // Hilt
     implementation "com.google.dagger:hilt-android:2.45"
@@ -84,28 +76,22 @@ dependencies {
     kapt "androidx.room:room-compiler:2.5.1"
 
     // Jetpack navigation
-    implementation "androidx.navigation:navigation-runtime-ktx:2.5.0"
-    implementation "androidx.navigation:navigation-fragment-ktx:2.5.0"
-    implementation "androidx.navigation:navigation-ui-ktx:2.5.0"
-
-    // Kotlin
-    implementation 'androidx.activity:activity-ktx:1.7.0'
+    implementation "androidx.navigation:navigation-compose:2.6.0"
 
     // Splash
     implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
 
     // Compose
-    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation 'androidx.activity:activity-compose:1.6.1'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
 
-    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.activity:activity-ktx:1.6.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
 
     // Kotest
     testImplementation("io.kotest:kotest-runner-junit5:5.3.2")
