--- a/data/build.gradle
+++ b/data/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     implementation "net.zetetic:android-database-sqlcipher:4.4.0"
     implementation "androidx.sqlite:sqlite:2.3.0"
 
+    // Coroutine
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+
     // RxJava3
     implementation "io.reactivex.rxjava3:rxjava:3.0.0"
 
