--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -54,11 +54,11 @@ dependencies {
     implementation project(path: ':domain')
 
     // Hilt
-    implementation "com.google.dagger:hilt-android:2.45"
+    implementation "com.google.dagger:hilt-android:2.44"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
-    kapt "com.google.dagger:hilt-compiler:2.45"
+    kapt "com.google.dagger:hilt-compiler:2.44"
 
     // RxJava3
     implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
@@ -76,22 +76,24 @@ dependencies {
     kapt "androidx.room:room-compiler:2.5.1"
 
     // Jetpack navigation
-    implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation "androidx.navigation:navigation-compose:2.5.1"
+    implementation("androidx.hilt:hilt-navigation-compose:1.0.0")
 
     // Splash
     implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
 
     // Compose
-    implementation 'androidx.activity:activity-compose:1.6.1'
-    implementation platform('androidx.compose:compose-bom:2022.10.00')
-    implementation 'androidx.compose.ui:ui'
-    implementation 'androidx.compose.ui:ui-graphics'
-    implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3:1.0.1'
+    implementation "androidx.compose.animation:animation:1.4.3"
+    implementation "androidx.compose.foundation:foundation:1.4.3"
+    implementation "androidx.compose.material:material:1.4.3"
+    implementation "androidx.compose.material3:material3:1.1.1"
+    implementation "androidx.compose.runtime:runtime:1.4.3"
+    implementation "androidx.compose.ui:ui:1.4.3"
 
-    implementation 'androidx.activity:activity-ktx:1.6.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    // wear
+    implementation "androidx.wear.compose:compose-foundation:1.1.2"
+    implementation "androidx.wear.compose:compose-material:1.1.2"
+    implementation "androidx.wear.compose:compose-navigation:1.1.2"
 
     // Kotest
     testImplementation("io.kotest:kotest-runner-junit5:5.3.2")
@@ -100,6 +102,10 @@ dependencies {
     // Mockk
     testImplementation("io.mockk:mockk:1.12.0")
     testImplementation "com.squareup.okhttp3:mockwebserver:4.9.0"
+
+    implementation 'androidx.activity:activity-ktx:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
