--- a/data/build.gradle
+++ b/data/build.gradle
@@ -35,6 +35,7 @@ android {
 dependencies {
     implementation project(path: ':domain')
 
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation "net.zetetic:android-database-sqlcipher:4.4.0"
     implementation "androidx.sqlite:sqlite:2.3.0"
 
@@ -46,6 +47,8 @@ dependencies {
 
     // Hilt
     implementation "com.google.dagger:hilt-android:2.45"
+    implementation 'androidx.datastore:datastore-core:1.0.0'
+    implementation 'androidx.datastore:datastore-core-android:1.1.0-alpha04'
     kapt "com.google.dagger:hilt-compiler:2.45"
 
     // Room
@@ -53,6 +56,10 @@ dependencies {
     implementation "androidx.room:room-rxjava3:2.5.1"
     implementation "androidx.room:room-ktx:2.5.1"
     kapt "androidx.room:room-compiler:2.5.1"
+
+    // DataStore
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation("androidx.datastore:datastore-preferences-core:1.0.0")
 
     // Kotest
     testImplementation("io.kotest:kotest-runner-junit5:5.3.2")
