--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -82,6 +82,9 @@ dependencies {
     // Splash
     implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
 
+    // Coroutine
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.9.0")
+
     // Compose
     implementation "androidx.compose.animation:animation:1.4.3"
     implementation "androidx.compose.foundation:foundation:1.4.3"
