--- a/data/build.gradle
+++ b/data/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     implementation "androidx.sqlite:sqlite:2.3.0"
 
     // Coroutine
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
 
     // RxJava3
     implementation "io.reactivex.rxjava3:rxjava:3.0.0"
