--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,13 +45,20 @@ dependencies {
 
     // Hilt
     implementation "com.google.dagger:hilt-android:2.45"
+    implementation 'androidx.datastore:datastore-core:1.0.0'
+    implementation 'androidx.datastore:datastore-core-android:1.1.0-alpha04'
     kapt "com.google.dagger:hilt-compiler:2.45"
+
+    // DataStore
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation("androidx.datastore:datastore-preferences-core:1.0.0")
 
     // Room
     implementation "androidx.room:room-runtime:2.5.1"
     implementation "androidx.room:room-rxjava3:2.5.1"
     implementation "androidx.room:room-ktx:2.5.1"
     kapt "androidx.room:room-compiler:2.5.1"
+    implementation 'com.google.code.gson:gson:2.9.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
