--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -37,11 +37,8 @@ android {
     kotlinOptions {
         jvmTarget = '11'
     }
-    buildFeatures {
-        compose true
-    }
-    composeOptions {
-        kotlinCompilerExtensionVersion = "1.4.2"
+    dataBinding {
+        enabled = true
     }
     packagingOptions {
         resources {
@@ -52,6 +49,10 @@ android {
 
 dependencies {
     implementation project(path: ':domain')
+
+    // Jetpack Navigation
+    implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
+    implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
 
     // Hilt
     implementation "com.google.dagger:hilt-android:2.44"
@@ -75,28 +76,11 @@ dependencies {
     implementation "androidx.room:room-ktx:2.5.1"
     kapt "androidx.room:room-compiler:2.5.1"
 
-    // Jetpack navigation
-    implementation "androidx.navigation:navigation-compose:2.5.1"
-    implementation("androidx.hilt:hilt-navigation-compose:1.0.0")
-
     // Splash
     implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
 
     // Coroutine
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
-
-    // Compose
-    implementation "androidx.compose.animation:animation:1.4.3"
-    implementation "androidx.compose.foundation:foundation:1.4.3"
-    implementation "androidx.compose.material:material:1.4.3"
-    implementation "androidx.compose.material3:material3:1.1.1"
-    implementation "androidx.compose.runtime:runtime:1.4.3"
-    implementation "androidx.compose.ui:ui:1.4.3"
-
-    // wear
-    implementation "androidx.wear.compose:compose-foundation:1.1.2"
-    implementation "androidx.wear.compose:compose-material:1.1.2"
-    implementation "androidx.wear.compose:compose-navigation:1.1.2"
 
     // Kotest
     testImplementation("io.kotest:kotest-runner-junit5:5.3.2")
@@ -112,9 +96,4 @@ dependencies {
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest'
 }
