--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,14 +44,12 @@ dependencies {
     implementation project(path: ':presentation')
 
     // Hilt
-    implementation "com.google.dagger:hilt-android:2.45"
-    implementation 'androidx.datastore:datastore-core:1.0.0'
-    implementation 'androidx.datastore:datastore-core-android:1.1.0-alpha04'
-    kapt "com.google.dagger:hilt-compiler:2.45"
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
 
     // DataStore
-    implementation "androidx.datastore:datastore-preferences:1.0.0"
-    implementation("androidx.datastore:datastore-preferences-core:1.0.0")
+    implementation("androidx.datastore:datastore:1.0.0")
+    implementation("androidx.datastore:datastore-rxjava3:1.0.0")
 
     // Room
     implementation "androidx.room:room-runtime:2.5.1"
