--- a/data/build.gradle
+++ b/data/build.gradle
@@ -46,10 +46,8 @@ dependencies {
     implementation "io.reactivex.rxjava3:rxjava:3.0.0"
 
     // Hilt
-    implementation "com.google.dagger:hilt-android:2.45"
-    implementation 'androidx.datastore:datastore-core:1.0.0'
-    implementation 'androidx.datastore:datastore-core-android:1.1.0-alpha04'
-    kapt "com.google.dagger:hilt-compiler:2.45"
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
 
     // Room
     implementation "androidx.room:room-runtime:2.5.1"
@@ -58,8 +56,8 @@ dependencies {
     kapt "androidx.room:room-compiler:2.5.1"
 
     // DataStore
-    implementation "androidx.datastore:datastore-preferences:1.0.0"
-    implementation("androidx.datastore:datastore-preferences-core:1.0.0")
+    implementation("androidx.datastore:datastore:1.0.0")
+    implementation("androidx.datastore:datastore-rxjava3:1.0.0")
 
     // Kotest
     testImplementation("io.kotest:kotest-runner-junit5:5.3.2")
