--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -37,8 +37,11 @@ android {
     kotlinOptions {
         jvmTarget = '11'
     }
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.4.2"
     }
     packagingOptions {
         resources {
@@ -49,26 +52,32 @@ android {
 
 dependencies {
     implementation project(path: ':domain')
-
-    // Jetpack Navigation
-    implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
-    implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
-
-    // Hilt
-    implementation "com.google.dagger:hilt-android:2.44"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
-    kapt "com.google.dagger:hilt-compiler:2.44"
 
     // RxJava3
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
+    implementation "io.reactivex.rxjava3:rxjava:3.0.0"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'com.jakewharton.rxbinding4:rxbinding:4.0.0'
 
-    // Glide
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    kapt 'com.github.bumptech.glide:compiler:4.12.0'
+    // Hilt
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
+
+    // DataStore
+    implementation("androidx.datastore:datastore:1.0.0")
+    implementation("androidx.datastore:datastore-rxjava3:1.0.0")
+
+    // KTX
+    implementation 'androidx.activity:activity-ktx:1.6.1'
+    implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
+
+    // Coroutine
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
 
     // Room
     implementation "androidx.room:room-runtime:2.5.1"
@@ -79,9 +88,6 @@ dependencies {
     // Splash
     implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
 
-    // Coroutine
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
-
     // Kotest
     testImplementation("io.kotest:kotest-runner-junit5:5.3.2")
     testImplementation("io.kotest:kotest-assertions-core:5.3.2")
@@ -89,11 +95,8 @@ dependencies {
     // Mockk
     testImplementation("io.mockk:mockk:1.12.0")
     testImplementation "com.squareup.okhttp3:mockwebserver:4.9.0"
-
-    implementation 'androidx.activity:activity-ktx:1.6.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-
+    
+    // Espresso
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
