2023-07-24 | mkkim | DataBinding 설정 수정, BottomNavigation 추가

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -37,11 +37,8 @@ android {
     kotlinOptions {
         jvmTarget = '11'
     }
-    buildFeatures {
-        dataBinding true
-    }
-    composeOptions {
-        kotlinCompilerExtensionVersion = "1.4.2"
+    dataBinding {
+        enabled = true
     }
     packagingOptions {
         resources {
