--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -69,9 +69,12 @@ dependencies {
     implementation("androidx.datastore:datastore-rxjava3:1.0.0")
 
     // KTX
+    implementation("androidx.core:core-ktx:1.8.0")
     implementation 'androidx.activity:activity-ktx:1.6.1'
-    implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
+    implementation("androidx.fragment:fragment-ktx:1.5.7")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1")
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
     implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
 
     // Coroutine
