--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
 
+    implementation 'io.github.ParkSangGwon:IntervalTimePicker:1.0.0'
+
     // RxJava3
     implementation "io.reactivex.rxjava3:rxjava:3.0.0"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
